--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
+    "gsap": "3.13.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.543.0",
     "next": "15.5.2",
