--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
+    "build": "next build",
+    "export": "next build",
     "start": "next start",
     "lint": "eslint"
   },
@@ -44,6 +45,7 @@
     "gsap": "3.13.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.543.0",
+    "motion": "^12.23.12",
     "next": "15.5.2",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
