--- a/package.json
+++ b/package.json
@@ -71,6 +71,6 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.13",
     "tw-animate-css": "^1.3.8",
-    "typescript": "^5"
+    "typescript": "5.9.2"
   }
 }
